--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Moringa School's Phase One Code Challenge 1.",
   "main": "net_salary_calculator.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "node"
   },
   "repository": {
     "type": "git",
